// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle test default snapshot testing 1`] = `
<div>
  <div
    class="pf-l-flex"
    data-ouia-component-type="page-title"
    data-ouia-safe="true"
  >
    <div
      class="pf-m-spacer-sm"
    >
      <h1
        class="pf-c-title pf-m-4xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Title
      </h1>
    </div>
  </div>
</div>
`;

exports[`PageTitle test snapshot testing with extra 1`] = `
<div>
  <div
    class="pf-l-flex"
    data-ouia-component-type="page-title"
    data-ouia-safe="true"
  >
    <div
      class="pf-m-spacer-sm"
    >
      <h1
        class="pf-c-title pf-m-4xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Title
      </h1>
    </div>
    <div
      class="pf-m-spacer-sm"
    >
      <span
        class="pf-c-label"
      >
        <span
          class="pf-c-label__content"
        >
          Label
        </span>
      </span>
    </div>
  </div>
</div>
`;
